

class Ball:
    def __init__(self):
        pass

    def _get_x(self, ):
        # TODO : Complete method content
        pass

    def _get_y(self, ):
        # TODO : Complete method content
        pass

    def _get_color(self, ):
        # TODO : Complete method content
        pass

    def _ball_to(self, ):
        # TODO : Complete method content
        pass

    def _change_ball_color(self, color_name):
        # TODO : Complete method content
        pass

    def get_ball_color(self, ):
        # TODO : Complete method content
        pass
