

class Button:
    def __init__(self):
        pass

    def _get_x(self, ):
        # TODO : Complete method content
        pass

    def _get_y(self, ):
        # TODO : Complete method content
        pass

    def _make_font(self, fong_name, font_size):
        # TODO : Complete method content
        pass

    def _make_label(self, ):
        # TODO : Complete method content
        pass

    def _place(self, ):
        # TODO : Complete method content
        pass

    def _command(self, ):
        # TODO : Complete method content
        pass
