

class GameChar:
    def __init__(self):
        pass

    def generate_and_move(self, ):
        # TODO : Complete method content
        pass

    def generate_extra_letters(self, ):
        # TODO : Complete method content
        pass

    def is_freeze(self, ):
        # TODO : Complete method content
        pass

    def set_freeze(self, freeze_var):
        # TODO : Complete method content
        pass

    def move_down(self, text):
        # TODO : Complete method content
        pass

    def hit_text(self, text):
        # TODO : Complete method content
        pass
