from game_window import GameWindow


class GameUI:
    def __init__(self):
        # TODO define the parameters : 
        self.game_window = GameWindow()

    def _create_game_window(self, ):
        # TODO : Complete method content
        pass
