class KeyPress:
    def __init__(self):
        pass

    def is_color_change_key(self, ):
        # TODO : Complete method content
        pass
