

class Music:
    def __init__(self):
        self._music_list = None

    def play_music(self, music_name):
        # TODO : Complete method content
        pass

    def stop_music(self, music_name):
        # TODO : Complete method content
        pass

    def change_music(self, music_name):
        # TODO : Complete method content
        pass

    def pause_music(self, music_name):
        # TODO : Complete method content
        pass
