

class Score:
    def __init__(self):
        self._score = None

    def get_score(self, ):
        # TODO : Complete method content
        pass

    def add_score(self, value):
        # TODO : Complete method content
        pass

    def sub_score(self, value):
        # TODO : Complete method content
        pass
