from config import Config


class SettingsWindow:
    def __init__(self):
        # TODO you should add Button elements in the list
        self.buttons = []
        # TODO define the parameters : 
        self.config = Config()
        self._config_window = None

    def _make_button_music_volumn(self, ):
        # TODO : Complete method content
        pass

    def _make_button_game_difficulty(self, ):
        # TODO : Complete method content
        pass

    def _make_ball_speed(self, ):
        # TODO : Complete method content
        pass

    def _make_button_quit(self, ):
        # TODO : Complete method content
        pass
